web-infras/parser/tests/fixtures/babel/es2015/uncategorised/363/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (1,16)
1|function foo({ await }) {}
 |              ^
